Provider and xrds done